we out here logging development

--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -5,7 +5,7 @@
 @code {
     [Parameter] public Country Code { get; set; }
 
-    [Parameter] public FlagSize Size { get; set; } = FlagSize.Normal;
+    [Parameter] public ElementSize Size { get; set; } = ElementSize.Normal;
 
     [Parameter] public string Class { get; set; } = string.Empty;
 
@@ -15,11 +15,11 @@
         {
             switch (this.Size)
             {
-                case FlagSize.Tiny:
+                case ElementSize.Tiny:
                     return "flag-xs";
-                case FlagSize.Small:
+                case ElementSize.Small:
                     return "flag-sm";
-                case FlagSize.Large:
+                case ElementSize.Large:
                     return "flag-lg";
                 default:
                     return "flag-md";
