--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -72,7 +72,7 @@
                             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                                 <MudText Typo="Typo.body2">[R@(context.Round)] @(context.Name)</MudText>
                                 <MudSpacer />
-                                <CountryFlag Code="@context.Country" Size="FlagSize.Tiny" />
+                                <CountryFlag Code="@context.Country" Size="ElementSize.Tiny" />
                             </MudStack>
                         </MudTd>
                         <MudTd>
@@ -111,7 +111,7 @@
                             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                                 <MudText Typo="Typo.body2">[R@(context.Round)] @(context.Name)</MudText>
                                 <MudSpacer />
-                                <CountryFlag Code="@context.Country" Size="FlagSize.Tiny" />
+                                <CountryFlag Code="@context.Country" Size="ElementSize.Tiny" />
                             </MudStack>
                         </MudTd>
                         <MudTd Class="accent-cell">
