--- a/SimTECH/SimTECH/Pages/Legacy.razor
+++ b/SimTECH/SimTECH/Pages/Legacy.razor
@@ -28,7 +28,7 @@
                                 <MudTd>
                                     <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
                                         <MudText>@context.Name</MudText>
-                                        <CountryFlag Code="@context.Country" Size="FlagSize.Small" />
+                                        <CountryFlag Code="@context.Country" Size="ElementSize.Small" />
                                     </MudStack>
                                 </MudTd>
                                 <MudTd>@context.Value</MudTd>
