--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -59,7 +59,7 @@
                         <MudText Typo="Typo.body1">@context.FirstName</MudText>
                         <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                        <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                     </MudStack>
                 </MudTd>
                 <MudTd Class="number-col">
