--- a/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/EliminationQualy.razor
@@ -48,7 +48,7 @@
                             <MudText>@context.FirstName</MudText>
                             <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                            <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd Class="number-col-lg">
@@ -133,7 +133,7 @@
                             <MudText Typo="Typo.body1">@context.FirstName</MudText>
                             <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                            <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd Class="number-col-lg">
@@ -225,7 +225,7 @@
                             <MudText Typo="Typo.body1">@context.FirstName</MudText>
                             <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                            <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd Class="number-col-lg">
