--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -117,7 +117,7 @@
                                 <MudIcon Icon="@Icons.Material.Filled.Timer" Size="Size.Small" Style="color:mediumpurple" />
                             }
                             <MudSpacer />
-                            <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                            <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd Class="number-col">
