--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -34,7 +34,7 @@
 
                     <MudListExtended T="string">
                         <MudListItemExtended T="string" SecondaryText="Country">
-                            <CountryNamedFlag Code="@Model.Race.Track.Country" Size="FlagSize.Normal" Reverse="true" />
+                            <CountryNamedFlag Code="@Model.Race.Track.Country" Size="ElementSize.Normal" Reverse="true" />
                         </MudListItemExtended>
                         <MudListItemExtended T="string" Text="@Model.Race.Climate.Terminology" SecondaryText="Weather">
                             <MudIcon Icon="@Model.Race.Climate.Icon" />
