--- a/SimTECH/SimTECH/Pages/Season/AddRaces.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddRaces.razor
@@ -39,7 +39,7 @@
                             <MudText>@context.Name</MudText>
                         </MudTd>
                         <MudTd>
-                            <CountryNamedFlag Code="@context.Country" Size="FlagSize.Small" Reverse="true" />
+                            <CountryNamedFlag Code="@context.Country" Size="ElementSize.Small" Reverse="true" />
                         </MudTd>
                         <MudTd>
                             <MudText Typo="Typo.caption">@(context.Length)Km</MudText>
