--- a/SimTECH/SimTECH/Pages/Season/Calendar.razor
+++ b/SimTECH/SimTECH/Pages/Season/Calendar.razor
@@ -43,7 +43,7 @@
                 <MudText Typo="Typo.caption">@context.Round</MudText>
             </MudTd>
             <MudTd>
-                <CountryNamedFlag Code="@context.Country" Size="FlagSize.Small" Reverse="true" Class="overflow-hider" />
+                <CountryNamedFlag Code="@context.Country" Size="ElementSize.Small" Reverse="true" Class="overflow-hider" />
             </MudTd>
             <MudTd>
                 <MudText Class="overflow-hider">@context.Name</MudText>
@@ -64,7 +64,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         <MudText Class="overflow-hider">@context.PoleSitter.Name</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@context.PoleSitter.Country" Size="FlagSize.Small" />
+                        <CountryFlag Code="@context.PoleSitter.Country" Size="ElementSize.Small" />
                     </MudStack>
                 </MudTd>
             }
@@ -83,7 +83,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         <MudText Class="overflow-hider">@context.DriverWinner.Name</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@context.DriverWinner.Country" Size="FlagSize.Small" />
+                        <CountryFlag Code="@context.DriverWinner.Country" Size="ElementSize.Small" />
                     </MudStack>
                 </MudTd>
             }
