--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
@@ -20,7 +20,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         <MudText>@context.FullName</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@context.Country" Size="FlagSize.Small" />
+                        <CountryFlag Code="@context.Country" Size="ElementSize.Small" />
                     </MudStack>
                 </MudTd>
                 <MudTd>
