--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/EditDrivers.razor
@@ -19,7 +19,7 @@
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText>@context.Driver?.FullName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
+                            <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd DataLabel="Number">
@@ -34,7 +34,7 @@
                         <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                             <MudText>@context.Driver?.FullName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
+                            <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
                         </MudStack>
                     </MudTd>
                     <MudTd DataLabel="Number">
