--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/FinalCheck.razor
@@ -38,7 +38,7 @@
                             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                                 <MudText>@context.Name</MudText>
                                 <MudSpacer />
-                                <CountryFlag Code="@(context.Team?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
+                                <CountryFlag Code="@(context.Team?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
                             </MudStack>
                         </MudTd>
                         <MudTd DataLabel="Principal">
@@ -73,7 +73,7 @@
                             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                                 <MudText>@context.Driver?.FullName</MudText>
                                 <MudSpacer />
-                                <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
+                                <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
                             </MudStack>
                         </MudTd>
                         <MudTd DataLabel="Number">
