--- a/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/PowerRankings.razor
@@ -15,7 +15,7 @@
                     <CellTemplate>
                         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
                             <MudText Typo="Typo.body2" Class="overflow-hider">@context.Item.DriverName</MudText>
-                            <CountryFlag Code="@context.Item.Nationality" Size="FlagSize.Small" />
+                            <CountryFlag Code="@context.Item.Nationality" Size="ElementSize.Small" />
                         </MudStack>
                     </CellTemplate>
                 </TemplateColumn>
