--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDrivers.razor
@@ -22,7 +22,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center">
                         <MudText>@context.Item.Driver.FullName</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@context.Item.Driver.Country" Size="FlagSize.Small" />
+                        <CountryFlag Code="@context.Item.Driver.Country" Size="ElementSize.Small" />
                     </MudStack>
                 </CellTemplate>
             </TemplateColumn>
