--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeamEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeamEditor.razor
@@ -10,7 +10,7 @@
                     @foreach (var team in Teams)
                     {
                         <MudSelectItem Value="team.Id">
-                            <CountryFlag Code="team.Country" Size="FlagSize.Tiny" />
+                            <CountryFlag Code="team.Country" Size="ElementSize.Tiny" />
                             @team.Name
                         </MudSelectItem>
                     }
