--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
@@ -24,7 +24,7 @@
             @foreach (var round in CountryRounds.OrderBy(e => e.Key))
             {
                 <MudTh Class="number-col-lg">
-                    <CountryFlag Code="@round.Value" Size="FlagSize.Small" />
+                    <CountryFlag Code="@round.Value" Size="ElementSize.Small" />
                 </MudTh>
             }
         <MudTh>AVG</MudTh>
@@ -40,7 +40,7 @@
             <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                 <MudText Class="overflow-hider">@context.Name</MudText>
                 <MudSpacer />
-                <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
             </MudStack>
         </MudTd>
         <MudTd>
