--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorStandings.razor
@@ -21,7 +21,7 @@
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                     <MudText>@context.Name</MudText>
                     <MudSpacer />
-                    <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                    <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                 </MudStack>
             </MudTd>
             <MudTd>
