--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
@@ -25,7 +25,7 @@
             @foreach (var round in CountryRounds.OrderBy(e => e.Key))
             {
                 <MudTh>
-                    <CountryFlag Code="@round.Value" Size="FlagSize.Small" />
+                    <CountryFlag Code="@round.Value" Size="ElementSize.Small" />
                 </MudTh>
             }
             <MudTh Class="number-col">AVG</MudTh>
@@ -41,7 +41,7 @@
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                     <MudText Class="overflow-hider">@context.Name</MudText>
                     <MudSpacer />
-                    <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                    <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                 </MudStack>
             </MudTd>
             <MudTd Class="number-col-lg">
