--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverStandings.razor
@@ -23,7 +23,7 @@
                 <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
                     <MudText>@context.Name</MudText>
                     <MudSpacer></MudSpacer>
-                    <CountryFlag Code="@context.Nationality" Size="FlagSize.Small" />
+                    <CountryFlag Code="@context.Nationality" Size="ElementSize.Small" />
                 </MudStack>
             </MudTd>
             <MudTd Class="number-col">
