--- a/SimTECH/SimTECH/Pages/Season/Seasons.razor
+++ b/SimTECH/SimTECH/Pages/Season/Seasons.razor
@@ -33,7 +33,7 @@
                         <MudStack Row="true" AlignItems="AlignItems.Center">
                             <MudText Class="overflow-hider">@context.Item.DriverName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="context.Item.DriverNationality" Size="FlagSize.Small" />
+                            <CountryFlag Code="context.Item.DriverNationality" Size="ElementSize.Small" />
                         </MudStack>
                     </CellTemplate>
                 </TemplateColumn>
@@ -47,7 +47,7 @@
                         <MudStack Row="true" AlignItems="AlignItems.Center">
                             <MudText Class="overflow-hider">@context.Item.TeamName</MudText>
                             <MudSpacer />
-                            <CountryFlag Code="context.Item.TeamNationality" Size="FlagSize.Small" />
+                            <CountryFlag Code="context.Item.TeamNationality" Size="ElementSize.Small" />
                         </MudStack>
                     </CellTemplate>
                 </TemplateColumn>
