--- a/SimTECH/SimTECH/Pages/Setup/Drivers.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Drivers.razor
@@ -29,7 +29,7 @@
             <PropertyColumn Property="e => e!.DateOfBirth" Title="Born in" Format="yyyy" />
             <TemplateColumn T="Driver" Title="Nation" SortBy="e => e.Country">
                 <CellTemplate>
-                    <CountryNamedFlag Code="@context.Item.Country" Size="FlagSize.Small" Reverse="true" />
+                    <CountryNamedFlag Code="@context.Item.Country" Size="ElementSize.Small" Reverse="true" />
                 </CellTemplate>
             </TemplateColumn>
             <TemplateColumn T="Driver" Title="League" Sortable="false">
