--- a/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
+++ b/SimTECH/SimTECH/Pages/Setup/HumanBeingGenerator.razor
@@ -51,11 +51,11 @@
                                                >
                                 <ItemTemplate>
                                     <MudCheckBox Checked="@(context.IsSelected)" Color="Color.Secondary" />
-                                    <CountryNamedFlag Code="@(context.Value.Country)" Justify="Justify.FlexStart" Size="FlagSize.Normal" />
+                                    <CountryNamedFlag Code="@(context.Value.Country)" Justify="Justify.FlexStart" Size="ElementSize.Normal" />
                                 </ItemTemplate>
                                 <ItemSelectedTemplate>
                                     <MudCheckBox Checked="@(context.IsSelected)" Color="Color.Secondary" />
-                                    <CountryNamedFlag Code="@(context.Value.Country)" Justify="Justify.FlexStart" Size="FlagSize.Normal" />
+                                    <CountryNamedFlag Code="@(context.Value.Country)" Justify="Justify.FlexStart" Size="ElementSize.Normal" />
                                 </ItemSelectedTemplate>
                             </MudSelectExtended>
                         }
@@ -84,7 +84,7 @@
                                                         <MudListItem>
                                                             <CountryNamedFlag Code="@lang.Country"
                                                                               Justify="Justify.FlexStart"
-                                                                              Size="FlagSize.Small"
+                                                                              Size="ElementSize.Small"
                                                                               Typo="Typo.body2"
                                                                               Reverse="true" />
                                                         </MudListItem>
@@ -123,7 +123,7 @@
                             <MudTd>@context.Dob.ToShortDateString()</MudTd>
                             <MudTd>
                                 <CountryNamedFlag Code="@context.Nationality"
-                                                  Size="FlagSize.Small"
+                                                  Size="ElementSize.Small"
                                                   Reverse="true" />
                             </MudTd>
                             <MudTd>
