--- a/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
@@ -17,7 +17,7 @@
                                 {
                                     <MudSelectItem Value="@driver">
                                         <MudText>@driver.FullName</MudText>
-                                        <CountryFlag Code="@driver.Country" Size="FlagSize.Tiny" />
+                                        <CountryFlag Code="@driver.Country" Size="ElementSize.Tiny" />
                                     </MudSelectItem>
                                 }
                             </MudSelect>
@@ -26,7 +26,7 @@
                                 {
                                     <MudSelectItem Value="@driver">
                                         <MudText>@driver.FullName</MudText>
-                                        <CountryFlag Code="@driver.Country" Size="FlagSize.Tiny" />
+                                        <CountryFlag Code="@driver.Country" Size="ElementSize.Tiny" />
                                     </MudSelectItem>
                                 }
                             </MudSelect>
@@ -39,7 +39,7 @@
                                 @if (driverLeft != null)
                                 {
                                     <MudText Typo="Typo.body1">
-                                        <CountryFlag Code="@driverLeft.Country" Size="FlagSize.Small" />
+                                        <CountryFlag Code="@driverLeft.Country" Size="ElementSize.Small" />
                                         @driverLeft.FullName
                                     </MudText>
                                 }
@@ -48,7 +48,7 @@
                                 @if (driverRight != null)
                                 {
                                     <MudText Typo="Typo.body1">
-                                        <CountryFlag Code="@driverRight.Country" Size="FlagSize.Small" />
+                                        <CountryFlag Code="@driverRight.Country" Size="ElementSize.Small" />
                                         @driverRight.FullName
                                     </MudText>
                                 }
