--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -153,6 +153,18 @@ th {
     display: none !important;
 }
 
+.muted-background-primary {
+    background-color: rgba(var(--mud-palette-primary), 0.5);
+}
+
+.muted-background-secondary {
+    background-color: rgba(var(--mud-palette-secondary), 0.5);
+}
+
+.muted-background-tertiary {
+    background-color: rgba(var(--mud-palette-tertiary), 0.5);
+}
+
 .font-default {
     font-family: var(--mud-typography-default-family);
 }
