--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignDriverTeams.razor
@@ -43,7 +43,7 @@
                     <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-1">
                         <MudText Class="overflow-hider">@(context.Driver?.FullName)</MudText>
                         <MudSpacer />
-                        <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="FlagSize.Small" />
+                        <CountryFlag Code="@(context.Driver?.Country ?? Constants.DefaultCountry)" Size="ElementSize.Small" />
                     </MudStack>
                 </MudPaper>
             </ItemRenderer>
