--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDriverEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonDriverEditor.razor
@@ -20,7 +20,7 @@
                                             <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
                                                 <MudText>@driver.FullName</MudText>
                                                 <MudSpacer />
-                                                <CountryFlag Code="@driver.Country" Size="FlagSize.Tiny" />
+                                                <CountryFlag Code="@driver.Country" Size="ElementSize.Tiny" />
                                             </MudStack>
                                         </MudSelectItem>
                                     }
