--- a/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/Entrants/SeasonTeams.razor
@@ -21,7 +21,7 @@
             <PropertyColumn Property="e => e!.Name" />
             <TemplateColumn T="SeasonTeam" SortBy="e => e.Team.Country" Title="Country">
                 <CellTemplate>
-                    <CountryNamedFlag Code="@context.Item.Team.Country" Size="FlagSize.Small" Reverse="true" Typo="Typo.body2" />
+                    <CountryNamedFlag Code="@context.Item.Team.Country" Size="ElementSize.Small" Reverse="true" Typo="Typo.body2" />
                 </CellTemplate>
             </TemplateColumn>
             <PropertyColumn Property="e => e!.Principal" />
