--- a/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
@@ -21,7 +21,7 @@
                                         <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
                                             <MudText>@driver.FullName</MudText>
                                             <MudSpacer />
-                                            <CountryFlag Code="@driver.Country" Size="FlagSize.Tiny" />
+                                            <CountryFlag Code="@driver.Country" Size="ElementSize.Tiny" />
                                         </MudStack>
                                     </MudSelectItem>
                                 }
